--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ site_url: https://project-unisonos.github.io
 docs_dir: docs
 theme:
   name: mkdocs
+  custom_dir: overrides
 
 nav:
   - Home: index.md
@@ -34,6 +35,7 @@ nav:
       - Testing: developers/testing.md
       - Hardware Deployment: developers/hardware.md
       - Coding Conventions: developers/coding-conventions.md
+      - Accessibility: developers/accessibility.md
       - Contributing: developers/contributing.md
   - Reference:
       - Specs & Schemas: reference/specs.md
@@ -60,3 +62,4 @@ markdown_extensions:
 
 extra_css:
   - assets/nav-contrast.css
+  - assets/a11y.css
