--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install mkdocs
+          python -m pip install mkdocs mkdocs-redirects
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
