Shorten navbar brand; fix mobile dropdown contrast

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Project Unison
+site_name: UnisonOS
 site_description: Edge-first agentic computing platform
 site_url: https://project-unisonos.github.io
 
