docs(experience): align principles with doctrine and renderer language

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,8 @@ nav:
   - Home: index.md
   - Experience:
       - Experience Principles: experience.md
+      - Experience Doctrine: experience/doctrine.md
+      - Renderer Design Language: experience/renderer-design-language.md
       - Multimodal Interaction: experience/multimodal.md
       - Speech: multimodal/speech.md
       - Sign: multimodal/sign-language.md
