--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,3 +74,7 @@ markdown_extensions:
 extra_css:
   - assets/nav-contrast.css
   - assets/a11y.css
+  - assets/nav-submenu.css
+
+extra_javascript:
+  - assets/nav-submenu.js
